# pharmatrack

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.dev.example  env.prod.example
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  main.py  pyproject.toml  seed_database.py
api/app/: __init__.py  database.py  exceptions.py
api/app/api/v1/: api.py
api/app/api/v1/endpoints/: drugs.py
api/app/models/: __init__.py  drug.py
api/app/repositories/: __init__.py  drug_interface.py  drug_repository.py
api/app/schemas/: __init__.py  drug.py
api/app/services/: __init__.py  drug_service.py
api/tests/: README.md  conftest.py  test_api.py  test_repositories.py  test_services.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AddDrugDrawer.tsx  BatchImportDrawer.tsx  DeleteConfirmationModal.tsx  DrugForm.tsx  EditDrugDrawer.tsx  InventoryTable.tsx  SearchAndFilter.tsx  StatsCards.tsx  index.ts
web/src/components/__tests__/: DeleteConfirmationModal.test.tsx  InventoryTable.test.tsx  SearchAndFilter.test.tsx  StatsCards.test.tsx
web/src/components/ui/: badge.tsx
web/src/hooks/: useDrugs.ts
web/src/hooks/__tests__/: useDrugs.test.tsx
web/src/lib/: utils.ts
web/src/providers/: QueryProvider.tsx
web/src/services/: api.ts
web/src/test/: setup.ts  utils.tsx
web/src/types/: api.ts  drug.ts  validation.ts
