[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "pharmatrack-api"
version = "0.1.0"
description = "Pharmacy inventory tracking API"
dependencies = [
  "fastapi>=0.104.1",
  "uvicorn[standard]>=0.24.0",
  "sqlalchemy>=2.0.23",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.5.0",
  "alembic>=1.13.1",
  "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
  "httpx>=0.25.2",
  "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/database.py", "tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
